welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: reassignment to val
     seenBaggle = true 
                ^