welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  val seenBaggle:Boolean = false
  for (i <- 1 to 6){
    forward()
    if (isOverBaggle()){
     seenBaggle = true 
    }
  }
  for(i <- 1 to 6){
    backward()
  }
  return seenBaggle
}